@@ -1,3 +1,14 @@
+2012-12-08  Chris Hutten-Czapski  <chutten@rim.com>
+
+        [BlackBerry] Remove about:credits
+        https://bugs.webkit.org/show_bug.cgi?id=104399
+
+        Reviewed by Rob Buis.
+
+        Just a simple removal.
+
+        * WebKitSupport/AboutData.cpp:
+
 2012-12-08  Rob Buis  <rbuis@rim.com>
 
         [BlackBerry] Remove no-op line in WebPage.cpp
